[package]
name = "mpcreator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.19", features = ["derive"] }
git2 = "0.17.2"
heck = "0.4.1"
inquire = "0.6.2"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
